EXTRA_DIST = lua
bin_PROGRAMS = lconvert
lconvert_SOURCES = \
lua/lapi.c \
lua/lcode.c \
lua/lctype.c \
lua/ldebug.c \
lua/ldo.c \
lua/ldump.c \
lua/lfunc.c \
lua/lgc.c \
lua/llex.c \
lua/lmem.c \
lua/lobject.c \
lua/lopcodes.c \
lua/lparser.c \
lua/lstate.c \
lua/lstring.c \
lua/ltable.c \
lua/ltm.c \
lua/lundump.c \
lua/lvm.c \
lua/lzio.c \
lua/lauxlib.c \
lua/lbaselib.c \
lua/lbitlib.c \
lua/lcorolib.c \
lua/ldblib.c \
lua/liolib.c \
lua/lmathlib.c \
lua/loslib.c \
lua/lstrlib.c \
lua/ltablib.c \
lua/loadlib.c \
lua/linit.c \
main.cpp
lconvert_CPPFLAGS = -DLUA_COMPAT_ALL -DLUA_ANSI
#lconvert_LDADD = lua/liblua.a
